<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Number9Game04</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Text2">Text 2!</string>
    
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
        
    
    <string name="Start">Start</string>
    <string name="Left">Left</string>
    <string name="Right">Right</string>
    <string name="Up">Up</string>
    <string name="Down">Down</string>
    
</resources>